tests/baselines/reference/overloadOnConstInBaseWithBadImplementationInDerived.errors.txt
==== tests/cases/compiler/overloadOnConstInBaseWithBadImplementationInDerived.ts (2 errors) ====
    interface I {
        x1(a: number, callback: (x: 'hi') => number);
                                ~~~~~~~~~~~~~~~~~~~
!!! overloadOnConstInBaseWithBadImplementationInDerived.ts(2,29): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    }
    
    class C implements I {
        x1(a: number, callback: (x: 'hi') => number) { // error
                                ~~~~~~~~~~~~~~~~~~~
!!! overloadOnConstInBaseWithBadImplementationInDerived.ts(6,29): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
        }
    }